--- a/app/subspace.css
+++ b/app/subspace.css
@@ -24,6 +24,10 @@
 	display: none;
 }
 
+.console:not(.showConsole) textarea {
+	display: none !important;
+}
+
 .console.showConsole {
 	box-shadow: 0px 2px 2px rgba(0,0,0,0.85);
 	transform: translateY(-0%) !important;
