--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -239,12 +239,12 @@
 
 .actor-item[data-mode="0"] .sprite {
 	--base-transform: translate(-50%, calc(-100% + 1px));
-	transform: var(--base-transform);
+	transform: var(--base-transform) translateZ(0);
 }
 
 .actor-item:not([data-rolling="true"])[data-mode="0"] .sprite {
 	--base-transform: translate(-50%, calc(-100% - var(--hoverWidth))) rotate(calc(-1rad * var(--display-angle)));
-	transform: var(--base-transform);
+	transform: var(--base-transform) translateZ(0);
 }
 
 .actor-item:not([data-rolling="true"])[data-mode="1"] .sprite {
